Added ktlint to project